# Dependent-Types

./: Dependent-Types.cabal  LICENSE  README.md
src/: Base.hs  Lists.hs  Nats.hs  stash.hs
