cabal-version: 2.4
name:          Dependent-Types
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
maintainer:    michael.kohlhaas@chammy.info
author:        Michael Kohlhaas
category:      proofs
build-type:    Simple

library
    exposed-modules:
        Base
        Lists
        Nats

    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: NoStarIsType UnicodeSyntax
    ghc-options:        -Wunticked-promoted-constructors
    build-depends:      base ^>=4.14.3.0
